--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,43 +1,71 @@
 body {
-  background-color: #444;
-  color: #fff;
-  text-align: center;
-  font-size: 20px;
-  font-family: 'Quicksand';
-  padding-top: 5%;
-  word-wrap: break-word;
+    background-color: #fff;
+    color: #444;
+    text-align: center;
+    font-size: 25px;
+    /* font-family: 'Butcherman', cursive; */
+    font-family: 'Ubuntu', sans-serif;
+    padding-top: 5%;  /* nothing touch the top of the screen */
+    word-wrap: break-word;
 }
 
 .logo {
-  width: 250px;
-  height: 250px;
+    width: 465px;
+    height: 262px;
 }
 
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ButtonInfo {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+    padding: 20px;
+}
+
+.Button {
+    padding: 5px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 .WalletInfo {
-  width: 500px;
+    width: 680px;
 }
 
 .Block {
-  border: 1px solid #fff;
-  padding: 5%;
-  margin: 2%;
+    border: 4px solid #444;
+    padding: 4%;
+    margin-top: 30px;
+    margin-right: 70px;
+    margin-bottom: 30px;
+    margin-left: 70px;
 }
 
 .Transaction {
-  padding: 5%;
+    padding: 3%;
 }
 
-.ConductTransaction, .TransactionPool {
-  margin: 10%;
+.Trading, .TransactionPool {
+    margin: 10%
 }
 
 a, a:hover {
-  color: #e66;
-  text-decoration: underline;
+    color: gold;
+    text-decoration: underline;
+}
+
+.title {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+}
+.font {
+    text-shadow: 2px 2px rgba(0, 102, 255, 0.678);
+    font-style:italic;
 }
